--- a/frontend/html/盒子浮动clear.html
+++ b/frontend/html/盒子浮动clear.html
@@ -26,7 +26,7 @@
         }
 
         p {
-            clear: left;
+            clear: right;
             margin: 5px;
             background-color: blanchedalmond;
             border: 1px solid blue;
