--- a/frontend/css/context.html
+++ b/frontend/css/context.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="../css/test_style.css">
+<link rel="stylesheet" href="test_style.css">
 <p>The strongly emphasized word in this paragraph is<strong>red</strong>.</p>
 <h2>This subhead is also red.</h2>
 <h2>The strongly emphasized word in this subhead is<strong>blue</strong>.</h2>     
