--- a/frontend/javascript/hello.html
+++ b/frontend/javascript/hello.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="test.js" charset="UTF-8" ></script>
     <script type="text/javascript">
         alert("Hello javascript!");
         document.write("Hi Javascript!");
