--- a/frontend/javascript/var.html
+++ b/frontend/javascript/var.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="test.js"></script>
     <script type="text/javascript">
         var a = 1;
         document.write("a = " + a);
@@ -22,6 +23,12 @@
         d = null;
         document.write("d = " + d);
         document.write("<br />");
+
+        sayHello();
+        document.write("<br />");
+
+        var e = add(5, 8);
+        document.write("e = " + e);
     </script>
 </head>
 <body>
