js function constructor

--- a/frontend/javascript/var.html
+++ b/frontend/javascript/var.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="test.js"></script>
+    <script src="js/test.js"></script>
     <script type="text/javascript">
         var a = 1;
         document.write("a = " + a);
