--- a/java/JSF/PrimeFaces/AjaxCore/web/listener.xhtml
+++ b/java/JSF/PrimeFaces/AjaxCore/web/listener.xhtml
@@ -6,6 +6,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
+<h:body>
 <h:form>
     <h:panelGrid columns="3">
         <h:outputText value="Keyup: " />
@@ -15,4 +16,5 @@
         <h:outputText id="out" value="#{listenerView.text}" />
     </h:panelGrid>
 </h:form>
+</h:body>
 </html>
