--- a/java/JSF/PrimeFaces/AjaxCore/web/index.xhtml
+++ b/java/JSF/PrimeFaces/AjaxCore/web/index.xhtml
@@ -6,13 +6,14 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
-
+<h:body>
 <h:form id="asdf">
    <h:panelGrid columns="4" cellpadding="5">
       <h:outputLabel for="textname" value="Name:" style="font-weight:bold" />
       <p:inputText id="textname" value="#{basicView.text}" />
-      <p:commandButton value="Submit" update="display" icon="ui-icon-check" />
+      <p:commandButton value="Submit" update="display" />
       <h:outputText id="display" value="#{basicView.text}" />
    </h:panelGrid>
 </h:form>
+</h:body>
 </html>
