--- a/frontend/javascript/jQuery/jQuery.html
+++ b/frontend/javascript/jQuery/jQuery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="js/jquery-1.12.4.js"></script>
+    <script src="../js/jquery-1.12.4.js"></script>
     <!--<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>-->
     <script>
         $(document).ready(function () {
